--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head lang="zh-tw">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <title>如何獲得bearer token(中文)</title>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
         @import url('https://fonts.googleapis.com/css?family=Roboto');
@@ -147,7 +148,7 @@
                 </div>
                 <i class="material-icons">複製內容</i>
             </div>
-        <li>Copy the bearer token that it shows in the console</li>
+        <li>複製控制台中顯示的bearer toeken</li>
     </ul>
     <p>您現在擁有了Minecraft帳戶的bearer token.</p>
     <p><b>重要：如果您向某人提供此token，他們可以完全控制您的 Minecraft 帳戶。</b></p>
