--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
     <p>您現在擁有了Minecraft帳戶的bearer token.</p>
     <p><b>重要：如果您向某人提供此token，他們可以完全控制您的 Minecraft 帳戶。</b></p>
     <footer>This page is made by <a href="https://kqzz.me">Kqzz</a> with source code available <a
-            href="https://github.com/Kqzz/mc-bearer-token">here</a></footer>
+            href="https://github.com/Kqzz/mc-bearer-token">here</a><br>
+        由<a href="https://github.com/senina4">senina4</a>翻譯
+    </footer>
     <script>
         document.querySelector('.material-icons').addEventListener('click', () => {
             navigator.clipboard.writeText(document.querySelector('#code').innerHTML);
