--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div id="codeWrapper">
                 <div id="code">console.log(`; ${document.cookie}`.split('; bearer_token=').pop().split(';').shift())
                 </div>
-                <i class="material-icons">複製內容</i>
+                <i class="material-icons">content_copy</i>
             </div>
         <li>複製控制台中顯示的bearer toeken</li>
     </ul>
